[gd_scene load_steps=7 format=4 uid="uid://ckn1ugd7d88nm"]

[ext_resource type="PackedScene" uid="uid://uawo0nxcj2ji" path="res://Prefab/TowerDefense/Character/TowerDefenseItem.tscn" id="1"]
[ext_resource type="Script" uid="uid://ykutf3v8kqax" path="res://Prefab/TowerDefense/Character/TowerDefenseMower.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bhh76tmil13cb" path="res://Script/Component/MoveComponent/MoveComponent.tscn" id="3"]
[ext_resource type="Script" uid="uid://domu0k4tfig2c" path="res://addons/godot_state_charts/atomic_state.gd" id="4"]
[ext_resource type="Script" uid="uid://bnuagwct5sv5y" path="res://addons/godot_state_charts/transition.gd" id="5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8hont"]
size = Vector2(20.25, 33)

[node name="TowerDefenseMower" instance=ExtResource("1")]
z_index = -7
script = ExtResource("2")
runAnimeClips = "Normal"
runWaterAnimeClips = "Normal"
attackAnimeClips = ""
attackWaterAnimeClips = ""
sleepAnimeClip = "Normal"
itemLayer = 8

[node name="TransformPoint" parent="SpriteGroup" index="1"]
position = Vector2(-50, 36)

[node name="ShadowSprite" parent="." index="3"]
position = Vector2(-45, 50)

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-10.125, 0)
shape = SubResource("RectangleShape2D_8hont")

[node name="MoveComponent" parent="." index="8" instance=ExtResource("3")]
unique_name_in_owner = true

[node name="Run" type="Node" parent="StateChart/CompoundState" index="2"]
script = ExtResource("4")

[node name="ToRun" type="Node" parent="StateChart/CompoundState" index="5"]
script = ExtResource("5")
to = NodePath("../Run")
event = &"ToRun"
delay_in_seconds = "0.0"

[connection signal="area_entered" from="HitBox" to="." method="HitCheck"]
[connection signal="state_entered" from="StateChart/CompoundState/Run" to="." method="RunEntered"]
[connection signal="state_exited" from="StateChart/CompoundState/Run" to="." method="RunExited"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Run" to="." method="RunProcessing"]
